[package]
name = "code-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.26.0"
egui_extras = { features = ["default"] }
eframe = { version = "0.26.0", default-features = false, features = [
	"accesskit",
	"default_fonts",
	"glow",
	"persistence",
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }